# mdbtop

./: .gitignore  README.md  cli.py  pyproject.toml
mdbtop/: __init__.py  cli.py  monitor.py
mdbtop/utils/: log2html.py
mdbtop/utils/templates/: index_template.j2  plot.js
