[tool.poetry]
name = "mdbtop"
version = "0.1.0"
description = ""
authors = ["svetlin <svetlin.stalinov@monetdbsolutions.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
psutil = "^5.9.7"

[tool.poetry.scripts]
mdbtop = 'cli:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
