[tool.poetry]
name = "mdbtop"
version = "0.1.0"
description = ""
authors = ["svetlin <svetlin.stalinov@monetdbsolutions.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
psutil = "^5.9.7"
jinja2 = "^3.1.3"

[tool.poetry.scripts]
mdbtop = 'mdbtop.cli:main'
mdbtop2html = 'mdbtop.utils.log2html:main'

[tool.poetry.extras]
templates = ["jinja-templates", 'js']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
